# advance-rag

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  Research_Hub_Executive_Report_1775711216812.pdfZone.Identifier  docker-compose.yml  srsadmin_tables.csv  srsadmin_unique_schemes_per_table.csv  srsdb_clarity_notebook.ipynb  srsdb_dump_overview.md  test_registry_top10_export.py  test_srsdb_top10_export.py
backend/: Dockerfile  README.md  pyproject.toml  scratch_db.py
backend/scripts/: align_graph_schema.py  clear_neo4j_data.py  export_top10_rows_all_tables.py  harden_hubs.py  run_master_registry_rollout.py
backend/src/: main.py
backend/src/core/: config.py  database.py  logger.py
backend/src/mcp/: mcp_config.json  test_usr_server.py  usr_server.py
backend/src/models/: __init__.py  analysis.py  document.py  eligibility.py  project.py  registry.py  report.py  review.py
backend/src/routers/: analyses.py  documents.py  eligibility.py  health.py  logs.py  projects.py  query.py  registry.py  reports.py  review.py  usr.py  voice.py
backend/src/services/: agent_router.py  ai_analytics.py  analysis_service.py  confidence.py  eligibility.py  eligibility_schema.py  extractor.py  graph_db.py  (+10 more)
backend/tests/: test_confidence.py  test_eligibility_service.py  test_export_top10_rows_all_tables.py  test_fixed_manifest_evaluation.py  test_graph_db.py  test_graph_sync.py  test_master_registry_rollout_script.py  test_master_registry_service.py  test_processor.py  test_query_usr_resolution.py  test_report_store.py  test_reporting.py  test_usr_stats.py
(+49 files in other folders)
