[project]
name = "backend"
version = "1.0.0"
description = "Advance-Rag — Production-Ready RAG Pipeline (NVIDIA NIM)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlmodel>=0.0.21",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    # Vector DB
    "qdrant-client>=1.11.0",
    # Object Storage
    "boto3>=1.35.0",
    # NVIDIA NIM / OpenAI-compatible
    "openai>=1.50.0",
    "httpx>=0.27.0",
    # Settings
    "pydantic-settings>=2.5.0",
    # Redis
    "redis>=5.1.0",
    # Utilities
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "neo4j>=5.21.0",
    "mcp>=1.2.0",
    # Universal Parsing
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.8.7",
    "markdown>=3.10.2",
    "pillow>=12.2.0",
    "reportlab>=4.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
